--- a/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
+++ b/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
@@ -38,6 +38,32 @@ spec:
           object-templates:
             - complianceType: musthave
               objectDefinition:
+                apiVersion: cert-manager.io/v1
+                kind: Certificate
+                metadata:
+                  annotations:
+                    argocd.argoproj.io/sync-wave: "1"
+                  name: rhacs-central-cert
+                spec:
+                  isCA: false
+                  commonName: "central-stackrox.apps.prime.pitt.ca" 
+                  secretName: rhacs-central-cert 
+                  dnsNames:
+                  - "central-stackrox.apps.prime.pitt.ca" 
+                  issuerRef:
+                    name: letsencrypt-prod 
+                    kind: ClusterIssuer
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: rhacs-central
+        spec:
+          remediationAction: inform
+          severity: high
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
                 apiVersion: platform.stackrox.io/v1alpha1
                 kind: Central
                 metadata:
@@ -53,6 +79,7 @@ spec:
                         enabled: false
                       route:
                         enabled: true
+                    defaultTLSSecret: rhacs-central-cert
                     persistence:
                       persistentVolumeClaim:
                         claimName: stackrox-db
