--- a/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
+++ b/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
@@ -19,6 +19,8 @@ metadata:
 spec:
   remediationAction: enforce
   disabled: false
+  hubTemplateOptions:
+    serviceAccountName: global
   policy-templates:
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
