secured cluster scanner v4

--- a/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
+++ b/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
@@ -122,6 +122,20 @@ spec:
                     listenOnCreates: false
                     listenOnEvents: true
                     listenOnUpdates: false
+                  scannerV4:
+                    indexer:
+                      scaling:
+                        autoScaling: Disabled
+                        replicas: 1
+                    matcher:
+                      scaling:
+                        autoScaling: Disabled
+                        replicas: 1
+                    # analyzer:
+                    #   scaling:
+                    #     autoScaling: Disabled
+                    #     replicas: 1
+                    scannerComponent: Enabled
                   perNode:
                     collector:
                       collection: EBPF
