--- a/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
+++ b/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
@@ -123,19 +123,7 @@ spec:
                     listenOnEvents: true
                     listenOnUpdates: false
                   scannerV4:
-                    indexer:
-                      scaling:
-                        autoScaling: Disabled
-                        replicas: 1
-                    matcher:
-                      scaling:
-                        autoScaling: Disabled
-                        replicas: 1
-                    # analyzer:
-                    #   scaling:
-                    #     autoScaling: Disabled
-                    #     replicas: 1
-                    scannerComponent: Enabled
+                    scannerComponent: Default
                   perNode:
                     collector:
                       collection: EBPF
