--- a/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
+++ b/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
@@ -110,7 +110,7 @@ spec:
                         requests:
                           cpu: 250m
                           memory: 1500Mi
-                    scannerComponent: Enabled
+                    scannerComponent: AutoSense
                   scanner:
                     scannerComponent: Disabled
     - objectDefinition:
