Disable legacy scanner

--- a/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
+++ b/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
@@ -124,6 +124,8 @@ spec:
                     listenOnUpdates: false
                   scannerV4:
                     scannerComponent: AutoSense
+                  scanner:
+                    scannerComponent: Disabled                    
                   perNode:
                     collector:
                       collection: EBPF
