Reduce central db resources

--- a/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
+++ b/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
@@ -80,6 +80,14 @@ spec:
                         enabled: false
                       route:
                         enabled: true
+                    db: 
+                      resources:
+                        limits:
+                          cpu: '4'
+                          memory: 8Gi
+                        requests:
+                          cpu: 250m
+                          memory: 4Gi
                     persistence:
                       persistentVolumeClaim:
                         claimName: stackrox-db
