--- a/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
+++ b/gitops/rhacm/policies/prime/rhacs-central/rhacs-central-policy.yaml
@@ -119,7 +119,7 @@ spec:
                         requests:
                           cpu: 250m
                           memory: 1500Mi
-                    scannerComponent: AutoSense
+                    scannerComponent: Enabled
                   scanner:
                     scannerComponent: Disabled
     - objectDefinition:
