--- a/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
+++ b/gitops/rhacm/policies/global/rhacs-securedcluster/rhacs-securedcluster-policy.yaml
@@ -123,6 +123,18 @@ spec:
                     listenOnEvents: true
                     listenOnUpdates: false
                   scannerV4:
+                    indexer:
+                      scaling:
+                        autoScaling: Disabled
+                        replicas: 1
+                      resources:
+                        limits:
+                          memory: 1Gi
+                        requests:
+                          cpu: 250m
+                          memory: 500Mi
+                    monitoring: 
+                      exposeEndpoint: Enabled
                     scannerComponent: AutoSense
                   scanner:
                     scannerComponent: Disabled                    
