Fix compliance operatorgroup

--- a/gitops/rhacm/policies/global/compliance-operator/compliance-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/compliance-operator/compliance-operator-policy.yaml
@@ -43,7 +43,7 @@ spec:
             sourceNamespace: openshift-marketplace
           operatorGroup:
             name: compliance-operator
-            namespace: compliance-operator
+            namespace: openshift-compliance
             targetNamespaces:
               - openshift-compliance
           versions:
