--- a/gitops/rhacm/policies/global/compliance-operator/compliance-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/compliance-operator/compliance-operator-policy.yaml
@@ -48,4 +48,45 @@ spec:
               - openshift-compliance
           versions:
             - compliance-operator.v1.6.1
-
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: scan-nist-800-53
+        spec:
+          remediationAction: inform
+          severity: high
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: compliance.openshift.io/v1alpha1
+                kind: ScanSettingBinding
+                metadata:
+                  name: ocp4-moderate
+                  namespace: openshift-compliance
+                profiles:
+                  - name: ocp4-moderate-node
+                    kind: Profile
+                    apiGroup: compliance.openshift.io/v1alpha1
+                  - name: ocp4-moderate
+                    kind: Profile
+                    apiGroup: compliance.openshift.io/v1alpha1
+                settingsRef:
+                  name: default
+                  kind: ScanSetting
+                  apiGroup: compliance.openshift.io/v1alpha1
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: compliance.openshift.io/v1alpha1
+                kind: ScanSettingBinding
+                metadata:
+                  name: rhcos4-moderate
+                  namespace: openshift-compliance
+                profiles:
+                  - name: rhcos4-moderate
+                    kind: Profile
+                    apiGroup: compliance.openshift.io/v1alpha1
+                settingsRef:
+                  name: default
+                  kind: ScanSetting
+                  apiGroup: compliance.openshift.io/v1alpha1
