--- a/gitops/rhacm/policies/global/default-storageclass/default-storageclass-policy.yaml
+++ b/gitops/rhacm/policies/global/default-storageclass/default-storageclass-policy.yaml
@@ -7,7 +7,7 @@ metadata:
     policy.open-cluster-management.io/categories: Storage
     policy.open-cluster-management.io/controls: Default Storage Class
 spec:
-  remediationAction: enforce
+  remediationAction: inform
   disabled: false
   hubTemplateOptions:
     serviceAccountName: global
