Remove ado config for now.

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -64,16 +64,16 @@ data:
       serviceLocatorMethod:
           type: multiTenant
 
-    azureDevOps:
-      host: dev.azure.com
-      token: ${PERSONAL_ACCESS_TOKEN}
-      organization: pittar-demos
+    # azureDevOps:
+    #   host: dev.azure.com
+    #   token: ${PERSONAL_ACCESS_TOKEN}
+    #   organization: pittar-demos
 
-    integrations:
-      azure:
-        - host: dev.azure.com
-          credentials:
-            - personalAccessToken: ${PERSONAL_ACCESS_TOKEN}
+    # integrations:
+    #   azure:
+    #     - host: dev.azure.com
+    #       credentials:
+    #         - personalAccessToken: ${PERSONAL_ACCESS_TOKEN}
 
     signInPage: oidc
 
