--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -10,6 +10,10 @@ data:
       title: Homelab IDP
       baseUrl: https://backstage-developer-hub-rhdh.apps.prime.pitt.ca
 
+      analytics:
+        adoptionInsights:
+          debug: false 
+
     argocd:
       waitCycles: 25
       secure: false
