More analytics config.

--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -12,7 +12,10 @@ data:
 
       analytics:
         adoptionInsights:
-          debug: false 
+          maxBufferSize: 20
+          flushInterval: 5000
+          debug: false
+          licensedUsers: 2000
 
     argocd:
       waitCycles: 25
