--- a/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
+++ b/gitops/cluster-services/redhat-developer-hub/instance/overlays/ado/app-config-rhdh.yaml
@@ -10,12 +10,12 @@ data:
       title: Homelab IDP
       baseUrl: https://backstage-developer-hub-rhdh.apps.prime.pitt.ca
 
-      analytics:
-        adoptionInsights:
-          maxBufferSize: 20
-          flushInterval: 5000
-          debug: false
-          licensedUsers: 2000
+      # analytics:
+      #   adoptionInsights:
+      #     maxBufferSize: 20
+      #     flushInterval: 5000
+      #     debug: false
+      #     licensedUsers: 2000
 
     argocd:
       waitCycles: 25
