--- a/gitops/rhacm/policies/prime/openshift-pipelines-operator/openshift-pipelines-operator-policy.yaml
+++ b/gitops/rhacm/policies/prime/openshift-pipelines-operator/openshift-pipelines-operator-policy.yaml
@@ -7,7 +7,7 @@ metadata:
     policy.open-cluster-management.io/categories: CICD
     policy.open-cluster-management.io/controls: Pipelines
 spec:
-  remediationAction: enforce
+  remediationAction: inform
   disabled: false
   policy-templates:
     - objectDefinition:
