--- a/gitops/rhacm/policies/global/openshift-gitops-operator/operator-policy.yaml
+++ b/gitops/rhacm/policies/global/openshift-gitops-operator/operator-policy.yaml
@@ -58,4 +58,4 @@ spec:
             source: redhat-operators
             sourceNamespace: openshift-marketplace
           versions:
-            - openshift-gitops-operator.v1.16.0-0.1746014725.p
+            - openshift-gitops-operator.v1.16.1
