--- a/gitops/rhacm/policies/prime/openshift-pipelines-operator/openshift-pipelines-operator-policy.yaml
+++ b/gitops/rhacm/policies/prime/openshift-pipelines-operator/openshift-pipelines-operator-policy.yaml
@@ -11,6 +11,23 @@ spec:
   disabled: false
   policy-templates:
     - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: openshift-pipelines-operator-namespace
+        spec:
+          remediationAction: inform
+          severity: high
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: v1                    
+                kind: Namespace
+                metadata:
+                  labels:
+                    openshift.io/cluster-monitoring: "true"
+                  name: openshift-pipelines-operator
+    - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1beta1
         kind: OperatorPolicy
         metadata:
@@ -22,7 +39,7 @@ spec:
           upgradeApproval: Automatic
           subscription:
             name: openshift-pipelines-operator-rh
-            namespace: openshift-operators
+            namespace: openshift-pipelines-operator
             channel: pipelines-1.18
             source: redhat-operators
             sourceNamespace: openshift-marketplace
