Move external secrets operator

--- a/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
+++ b/gitops/rhacm/policies/global/external-secrets-operator/external-secrets-operator-policy.yaml
@@ -51,7 +51,7 @@ spec:
           upgradeApproval: Automatic
           subscription:
             name: external-secrets-operator
-            namespace: openshift-operators
+            namespace: external-secrets
             channel: stable
             source: community-operators
             sourceNamespace: openshift-marketplace
