Add lightspeed operator policy

--- a/gitops/rhacm/policies/prime/kustomization.yaml
+++ b/gitops/rhacm/policies/prime/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - openshift-pipelines-operator
   - keycloak-operator
   - devspaces
+  - openshift-lightspeed
   - openshift-virtualization
   - kubeletconfig
   - rhacs-central
