--- a/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
+++ b/gitops/argocd/clusters/prime/cluster-services-rhacm/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - ../../../cluster-services/redhat-developer-hub/instance
   - ../../../cluster-services/devspaces/instance
   - ../../../cluster-services/openshift-virt/instance
+  - ../../../cluster-services/openshift-lightspeed/instance
