--- a/gitops/cluster-services/openshift-lightspeed/instance/OSLConfig.yaml
+++ b/gitops/cluster-services/openshift-lightspeed/instance/OSLConfig.yaml
@@ -8,12 +8,12 @@ spec:
       - credentialsSecretRef:
           name: credentials
         models:
-          - name: granite-3-3-8b-instruct
+          - name: mistral-small-24b-w8a8
         name: red_hat_openshift_ai
         type: rhoai_vllm
-        url: 'https://granite-3-3-8b-instruct-maas-apicast-production.apps.prod.rhoai.rh-aiservices-bu.com:443/v1'
+        url: 'https://mistral-small-24b-w8a8-maas-apicast-production.apps.prod.rhoai.rh-aiservices-bu.com:443/v1'
   ols:
-    defaultModel: granite-3-3-8b-instruct
+    defaultModel: mistral-small-24b-w8a8
     defaultProvider: red_hat_openshift_ai
     introspectionEnabled: true
     logLevel: INFO
