--- a/gitops/rhacm/policies/appservices/kafka-streams/kafka-streams-operator-policy.yaml
+++ b/gitops/rhacm/policies/appservices/kafka-streams/kafka-streams-operator-policy.yaml
@@ -40,8 +40,8 @@ spec:
           subscription:
             name: amq-streams
             namespace: kafka-streams
-            channel: amq-streams-2.9.x
+            channel: amq-streams-3.x
             source: redhat-operators
             sourceNamespace: openshift-marketplace
           versions:
-            - amqstreams.v2.9.1-1
+            - amq-streams.v3.0.0-9
