Update policy sets

--- a/gitops/rhacm/policysets/prod/prod-policyset.yaml
+++ b/gitops/rhacm/policysets/prod/prod-policyset.yaml
@@ -7,5 +7,6 @@ metadata:
 spec:
   description: prod policies.
   policies:
+    - banners-prod
     - bootstrap-openshift-gitops-prod
     - kubeletconfig
