Add an annotation.

--- a/gitops/cluster-services/devspaces/instance/checluster.yaml
+++ b/gitops/cluster-services/devspaces/instance/checluster.yaml
@@ -20,6 +20,8 @@ spec:
     maxNumberOfWorkspacesPerUser: -1
     containerBuildConfiguration:
       openShiftSecurityContextConstraint: container-build
+    workspacesPodAnnotations:
+      andrew/is: "awesome"
     defaultNamespace:
       autoProvision: true
       template: <username>-devspaces
