--- a/gitops/cluster-services/devspaces/instance/checluster.yaml
+++ b/gitops/cluster-services/devspaces/instance/checluster.yaml
@@ -22,8 +22,9 @@ spec:
       openShiftSecurityContextConstraint: container-build
     workspacesPodAnnotations:
       andrew/is: "awesome"
+    serviceAccount: devspaces-sa
     defaultNamespace:
-      autoProvision: true
+      autoProvision: false
       template: <username>-devspaces
     secondsOfInactivityBeforeIdling: 1800
     storage:
