Disable use workload monitoring.

--- a/gitops/rhacm/policies/global/user-workload-monitoring/user-workload-monitoring-policy.yaml
+++ b/gitops/rhacm/policies/global/user-workload-monitoring/user-workload-monitoring-policy.yaml
@@ -28,4 +28,4 @@ spec:
                   namespace: openshift-monitoring
                 data:
                   config.yaml: |
-                    enableUserWorkload: true
+                    enableUserWorkload: false
