Remove compliance operator for now.

--- a/gitops/rhacm/policysets/global/global-policyset.yaml
+++ b/gitops/rhacm/policysets/global/global-policyset.yaml
@@ -18,5 +18,5 @@ spec:
     - user-workload-monitoring
     - rhacs-operator
     - rhacs-securedcluster
-    - compliance-operator
     - service-interconnect-operator
+    #- compliance-operator
