Re-add compliance operator

--- a/gitops/rhacm/policysets/global/global-policyset.yaml
+++ b/gitops/rhacm/policysets/global/global-policyset.yaml
@@ -19,4 +19,4 @@ spec:
     - rhacs-operator
     - rhacs-securedcluster
     - service-interconnect-operator
-    #- compliance-operator
+    - compliance-operator
