--- a/gitops/rhacm/policysets/prime/prime-policyset.yaml
+++ b/gitops/rhacm/policysets/prime/prime-policyset.yaml
@@ -16,6 +16,7 @@ spec:
     - openshift-pipelines-operator
     - keycloak-operator
     - devspaces-operator
+    - lvm-storage-operator
     - crunchy-postgres-operator-v5
     - openshift-lightspeed-operator
     - openshift-virtualization-operator
