Add lvm storage

--- a/gitops/rhacm/policies/prime/lvm-storage/lvm-storage-operator-policy.yaml
+++ b/gitops/rhacm/policies/prime/lvm-storage/lvm-storage-operator-policy.yaml
@@ -45,3 +45,30 @@ spec:
             sourceNamespace: openshift-marketplace
           versions:
             - lvms-operator.v4.20.0
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
+        metadata:
+          name: lvm-storage-cluster
+        spec:
+          remediationAction: inform
+          severity: high
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                apiVersion: lvm.topolvm.io/v1alpha1
+                kind: LVMCluster
+                metadata:
+                  name: default-lvmcluster
+                  namespace: openshift-lvm-storage
+                spec:
+                  storage:
+                    deviceClasses:
+                      - fstype: xfs
+                        thinPoolConfig:
+                          chunkSizeCalculationPolicy: Static
+                          metadataSizeCalculationPolicy: Host
+                          sizePercent: 90
+                          name: thin-pool-1
+                          overprovisionRatio: 10
+                        name: vg1
